# TinyORM

./: .clang-tidy  .editorconfig  .env.mingw.example  .env.unix.example  .env.win32.example  .gitattributes  .gitignore  .qmake.conf  .shellcheckrc  404.html  AUTHOR  AUTHORS  CMakeLists.txt  CNAME  LICENSE  NOTES.txt  README.md  TinyORM.pro  TinyOrm.pro  building-hello-world.html  building-migrations.html  building-tinyorm.html  building.html  conf.pri  conf.pri.example  config.pri  database.html  dependencies.html  donations.html  features-summary.html  hello-world.html  index.html  main.cpp  migrations.html  opensearch.xml  query-builder.html  robots.txt  schema-builder.html  search.html  seeding.html  (+9 more)
drivers/common/: CMakeLists.txt  common.pro
drivers/common/include/: include.pri  pch.h  pch.pri
drivers/common/include/orm/drivers/: driverstypes.hpp  dummysqlerror.hpp  libraryinfo.hpp  sqldatabase.hpp  sqldatabasemanager.hpp  sqldriver.hpp  sqldrivererror.hpp  sqlerror.hpp  sqlfield.hpp  sqlquery.hpp  sqlquery1.hpp  sqlrecord.hpp  sqlresult.hpp  version.hpp
drivers/common/include/orm/drivers/concerns/: selectsallcolumnswithlimit0.hpp
drivers/common/include/orm/drivers/exceptions/: driverserror.hpp  invalidargumenterror.hpp  logicerror.hpp  outofrange.hpp  queryerror.hpp  runtimeerror.hpp  sqlerror.hpp  sqltransactionerror.hpp
drivers/common/include/orm/drivers/macros/: export.hpp
drivers/common/include/orm/drivers/utils/: notnull.hpp
drivers/common/include_private/: include_private.pri
drivers/common/include_private/orm/drivers/: config_p.hpp  constants_extern_p.hpp  constants_inline_p.hpp  constants_p.hpp  sqldatabase_p.hpp  sqldriver_p.hpp  sqlresult_p.hpp
drivers/common/include_private/orm/drivers/macros/: declaresqldriverprivate_p.hpp
drivers/common/include_private/orm/drivers/support/: connectionshash_p.hpp  sqldriverfactory_p.hpp  sqlrecordcache_p.hpp
drivers/common/include_private/orm/drivers/utils/: fs_p.hpp  helpers_p.hpp  type_p.hpp
drivers/common/resources/: TinyDrivers.rc.in
drivers/common/src/: src.pri
drivers/common/src/orm/drivers/: constants_extern_p.cpp  dummysqlerror.cpp  libraryinfo.cpp  sqldatabase.cpp  sqldatabase_p.cpp  sqldatabasemanager.cpp  sqldriver.cpp  sqldrivererror.cpp  sqlerror.cpp  sqlfield.cpp  sqlquery.cpp  sqlquery1.cpp  sqlrecord.cpp  sqlresult.cpp  sqlresult_p.cpp
drivers/common/src/orm/drivers/concerns/: selectsallcolumnswithlimit0.cpp
drivers/common/src/orm/drivers/exceptions/: logicerror.cpp  queryerror.cpp  runtimeerror.cpp  sqlerror.cpp
drivers/common/src/orm/drivers/support/: sqldriverfactory_p.cpp
drivers/common/src/orm/drivers/utils/: fs_p.cpp  type_p.cpp
drivers/mysql/: CMakeLists.txt  mysql.pro
drivers/mysql/include/: include.pri  pch.h  pch.pri
drivers/mysql/include/orm/drivers/mysql/: mysqldriver.hpp  mysqlresult.hpp  version.hpp
drivers/mysql/include_private/: include_private.pri
drivers/mysql/include_private/orm/drivers/mysql/: mysqlconstants_extern_p.hpp  mysqlconstants_inline_p.hpp  mysqlconstants_p.hpp  mysqldriver_p.hpp  mysqlresult_p.hpp  mysqltypes_p.hpp  mysqlutils_p.hpp
drivers/mysql/resources/: TinyMySql.dll.manifest  TinyMySql.rc.in
drivers/mysql/src/: src.pri
drivers/mysql/src/orm/drivers/mysql/: main.cpp  mysqlconstants_extern_p.cpp  mysqldriver.cpp  mysqldriver_p.cpp  mysqlresult.cpp  mysqlresult_p.cpp  mysqlutils_p.cpp
examples/tom/: CMakeLists.txt  conf.pri.example  main.cpp  tom.pro
tests/TinyUtils/: CMakeLists.txt  TinyUtils.pro
tests/TinyUtils/resources/: TinyUtils.nopragma.rc.in  TinyUtils.rc.in
tests/TinyUtils/src/: databases.cpp  databases.hpp  export.hpp  fs.cpp  fs.hpp  macros.hpp  pch.h  pch.pri  src.pri  version.hpp
tests/TinyUtils/src/common/: collection.hpp
tests/auto/functional/orm/tiny/: CMakeLists.txt  tiny.pro
tests/auto/functional/orm/tiny/basemodel/: basemodel.pro  tst_basemodel.cpp  tst_model.cpp
tests/auto/functional/others/versions/: CMakeLists.txt  tst_versions.cpp  versions.pro
tests/auto/functional/tom/migrate/: CMakeLists.txt  migrate.pro  tst_migrate.cpp
tests/auto/unit/orm/version/: CMakeLists.txt  tst_version.cpp  version.pro
tests/auto/utils/: CMakeLists.txt  utils.pro  utils_global.h
tests/auto/utils/resources/: TinyUtils.rc.in
tests/auto/utils/src/: database.cpp  database.hpp  databases.cpp  databases.hpp  pch.h  src.pri  utils.cpp  utils.hpp  utils_global.hpp  version.hpp
tests/auto/utils/testdata/: composer.json  create_and_seed_database.php  dotenv.example.ps1  mysql-q_media_test_orm.sql  mysql-q_tinyorm_test_1.sql
tests/testdata_tom/: CMakeLists.txt  conf.pri.example  main.cpp  testdata_tom.pro
tests/testdata_tom/database/: migrations.pri  seeders.pri
tests/testdata_tom/database/migrations/: 2022_05_11_170000_create_users_table.hpp  2022_05_11_170100_create_roles_table.hpp  2022_05_11_170200_create_role_user_table.hpp  2022_05_11_170300_create_user_phones_table.hpp  2022_05_11_170400_create_settings_table.hpp  2022_05_11_170500_create_torrents_table.hpp  2022_05_11_170600_create_torrent_peers_table.hpp  2022_05_11_170700_create_torrent_previewable_files_table.hpp  2022_05_11_170800_create_torrent_previewable_file_properties_table.hpp  2022_05_11_170900_create_file_property_properties_table.hpp  2022_05_11_171000_create_torrent_tags_table.hpp  2022_05_11_171100_create_tag_torrent_table.hpp  2022_05_11_171200_create_tag_properties_table.hpp  2022_05_11_171300_create_types_table.hpp  2022_05_11_171400_create_datetime_table.hpp  2022_05_11_171400_create_datetimes_table.hpp  2022_05_11_171500_create_albums_table.hpp  2022_05_11_171600_create_album_images_table.hpp  2022_05_11_171700_create_torrent_states_table.hpp  2022_05_11_171800_create_state_torrent_table.hpp  2022_05_11_171900_create_role_tag_table.hpp  2022_05_11_172000_create_empty_with_default_values_table.hpp
tests/testdata_tom/database/seeders/: databaseseeder.hpp
tests/utils/: CMakeLists.txt  utils.pro
tests/utils/resources/: TinyUtils.rc.in
tests/utils/src/: databases.hpp  export.hpp  fs.hpp  pch.h  src.pri  utils_global.hpp
(+2322 files in other folders)
